# groupselect-lib

./: .gitignore  README.md  pyproject.toml
groupselect/: __init__.py  allocate_numpy.py  allocate_pandas.py  allocation.py  field_mode.py
groupselect/algorithms/: __init__.py  algorithm_legacy.py
groupselect/examples/: __init__.py
groupselect/examples/data/: 100i_4j_3k_3d_data.csv  30i_4j_3k_3d_data.csv  philipps_example_data.csv  sf_f_40.csv
groupselect/tests/: test_load_examples.py  test_pandas.py
