[tool.poetry]
name = "groupselect"
version = "0.1.0"
description = "GroupSelect library."
authors = ["Philipp C. Verpoort <pcv@sortitionfoundation.org>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
numpy = "^2.1.3"
pytest = "^8.3.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
