[project]
name = "groupselect"
version = "0.1.0"
description = "GroupSelect library."
authors = [
    { name = "Philipp C. Verpoort", email = "pcv@sortitionfoundation.org" }
]
license = "MIT"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "numpy>=2.3.4",
    "pytest>=9.0.0",
]
